# DO-BF

./: .env  .gitignore  LICENSE  create_init_records.py  gunicorn.conf.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  runtime.txt  setup.cfg
async_forms/: __init__.py  async_forms.py
async_views/: __init__.py
async_views/auth/: __init__.py  forms.py  mixins.py  views.py
async_views/generic/: __init__.py  base.py  dates.py  detail.py  edit.py  list.py
cart/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
cart/app_services/: session_data.py  utils.py
catalogue/: urls.py  views.py
catalogue/app_services/: data_getters.py  utils.py
config/: asgi.py  constants.py  settings.py  urls.py  wsgi.py
coreStaticFiles/scripts/: addToCart.js  addToCarts.js  callBackModal.js  common.js  counter.js  header.js  locationModal.js  orderPage.js  quickOrderModal.js  rangeNumbersSlider.js  removeFromCart.js  removeFromCarts.js  sideButtons.js  sliderForCards.js
coreStaticFiles/styles/: breadcrumbs.css  callBackModal.css  cardLforCart.css  cardXlForSlider.css  cartOrdersSwitch.css  common.css  counter.css  footer.css  header.css  orderPage.css  quickOrderModal.css  sideButtons.css
custom_auth/: admin.py  exceptions.py  forms.py  models.py  urls.py  validators.py  views.py
delivery_and_payment/: apps.py  urls.py
feedback/: urls.py  views.py
fillers/: admin.py  models.py  urls.py  views.py
location/: forms.py  urls.py  views.py
mainpage/: admin.py  apps.py  models.py  urls.py  views.py
mainpage/app_services/: coql_queries.py  crm_entities_handlers.py  data_getters.py  mainpage_handlers.py
orders/: forms.py  inputs.py  urls.py  views.py
orders/app_services/: orders_handlers.py  test.py
products/: admin.py  exceptions.py  models.py  urls.py  views.py
products/app_services/: coql_queries.py  crm_entities_handlers.py  data_getters.py  product_handlers.py  utils.py
resources/: Zm9mYnR3aWdhcGh0dHBzOi8vd3d3LnpvaG9hcGlzLmV1.json
reviews/: urls.py  views.py
services/: client_handlers.py  common_handlers.py  coql_handlers.py  coql_queries.py  crm_entities_handlers.py  crm_interface.py  data_getters.py  image_handlers.py  mixins.py  utils.py
tests/: bases.py  conftest.py  settings.py
tests/custom_auth/: factories.py  test_tables.py
tests/mainpage/: conftest.py  factories.py  test_tables.py
userprofile/: admin.py  exceptions.py  forms.py  models.py  views.py
zoho_token/: admin.py  apps.py  exceptions.py  models.py  urls.py  utils.py  views.py
(+81 files in other folders)
