[tool.poetry]
name = "bonnyflowers"
version = "0.1.0"
description = ""
authors = ["Leviinson <votosi197@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.0"
django = "^4.2"
pillow = "^9.5.0"
pytest = "^7.3.1"
python-dotenv = "^1.0.0"
google-api-python-client = "^2.86.0"
facebook-sdk = "^3.1.0"
zohocrmsdk2-1 = "2.0.0"
mysqlclient = "^2.2.0"
mysql = "^0.0.3"
mysql-connector-python = "^8.1.0"
httpx = "^0.24.1"
phonenumbers = "^8.13.24"
faker = "18.13.0"
factory-boy = "^3.3.0"
gunicorn = "^21.2.0"
twilio = "^8.11.1"

[tool.poetry.group.lint]
optional = false

[tool.poetry.group.lint.dependencies]
flake8-docstrings = "^1.7.0"
flake8 = "5.0.4"
xenon = "^0.9.0"
mypy = "^1.3.0"
pre-commit = "^3.3.3"
flake8-pyproject = "^1.2.3"
isort = "^5.12.0"
black = "^23.9.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest-mock = "^3.11.1"
pytest-sugar = "^0.9.7"
pytest-cov = "^4.1.0"
pytest-randomly = "^3.12.0"
faker = "^18.10.1"
factory-boy = "^3.2.1"
pytest-django = "^4.5.2"
wheel = "^0.40.0"
pytest-clarity = "1.0.0"


[tool.poetry.group.dev.dependencies]
flake8-pyproject = "^1.2.3"
pre-commit = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = ['E203','D205','W503']
exclude = """
    migrations,
    README.md,
    poetry.lock,
    pyproject.toml,
    .pre-commit-config.yaml
    """
max-line-length = 96

[tool.black]
line-length = 96
include = '\.pyi?$'
force-exclude = """
    .pre-commit-config.yaml,
    poetry.lock,
    pyproject.toml,
    README.me
"""
extend-exclude = '''
/(
  | dist
  | .pytest_cache
  | .tox
  | docs
  | docs_src
  | .venv
  | .mypy_cache
  | .pre-commit-config.yaml
  | poetry.lock
  | pyproject.toml
  | README.md
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = []

[tool.mypy]
ignore_missing_imports = true
exclude = ".README.md"


[tool.pytest.ini_options]
# === Pytest ===
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = [".", "blog", "catalog", "config", "delivery_and_payment", "mainpage", "products", "reviews", "userprofile",]
norecursedirs = [".env", "migrations", "venv",]
testpaths = ["tests",]
console_output_style = "progress"
python_files = "test_*"
python_classes = "Test*"
python_functions = "test_*"

# === Pytest ===
